Add Google Calendar to homepage

--- a/package.json
+++ b/package.json
@@ -112,6 +112,9 @@
             },
             "instagram_url": {
                 "type": "text"
+            },
+            "google_calendar_url": {
+                "type": "text"
             }
         }
     },
