--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
     "name": "edition",
     "description": "A clean, minimal newsletter theme for the Ghost publishing platform",
     "version": "1.0.0",
-    "private": true,
     "engines": {
-        "ghost": ">=5.0.0"
+        "ghost": ">=4.0.0"
     },
     "license": "MIT",
     "author": {
@@ -18,7 +17,7 @@
         "ghost-theme"
     ],
     "config": {
-        "posts_per_page": 10,
+        "posts_per_page": 3,
         "image_sizes": {
             "xs": {
                 "width": 150
@@ -96,6 +95,11 @@
                 "default": "Expanded",
                 "group": "homepage"
             },
+            "show_share_links": {
+                "type": "boolean",
+                "default": true,
+                "group": "post"
+            },
             "show_author": {
                 "type": "boolean",
                 "default": true,
@@ -105,20 +109,26 @@
                 "type": "boolean",
                 "default": true,
                 "group": "post"
+            },
+            "instagram_url": {
+                "type": "text"
+            },
+            "google_calendar_url": {
+                "type": "text"
             }
         }
     },
     "scripts": {
         "dev": "gulp",
         "test": "gscan .",
+        "test:ci": "gscan --fatal --verbose .",
         "zip": "gulp zip"
     },
     "devDependencies": {
-        "@tryghost/shared-theme-assets": "1.0.0",
         "autoprefixer": "10.4.7",
         "beeper": "2.1.0",
-        "cssnano": "5.1.12",
-        "gscan": "4.32.0",
+        "cssnano": "5.1.10",
+        "gscan": "4.31.1",
         "gulp": "4.0.2",
         "gulp-concat": "2.6.1",
         "gulp-livereload": "4.0.2",
@@ -128,5 +138,8 @@
         "postcss": "8.4.14",
         "postcss-easy-import": "4.0.0",
         "pump": "3.0.0"
-    }
+    },
+    "browserslist": [
+        "defaults"
+    ]
 }
